# vixen_bevy

./: .gitignore  Cargo.toml
assets/: blocks.json  map.dds
assets/packs/classic/: blocks.json
assets/packs/ghibli/: blocks.json
assets/packs/ghibli/textures/: birch_leaves.dds  cobblestone.dds  dirt.dds  grass.dds  oak_leaves.dds  oak_log.dds  red_leaves.dds  red_mushroom_cap.dds  side_grass.dds  stone.dds  top_oak_log.dds
crates/vixen_core/: Cargo.toml
crates/vixen_core/src/: lib.rs
crates/vixen_core/src/debug/: plugin.rs
crates/vixen_core/src/game/: block_types.rs  mod.rs  plugin.rs
crates/vixen_core/src/game/pause_menu/: mod.rs  plugin.rs
crates/vixen_core/src/loader/: block_data.rs  chunk.rs  mod.rs  plugin.rs  registry.rs  scanner.rs  texture.rs  worldgen.rs
crates/vixen_core/src/main_menu/: plugin.rs
crates/vixen_core/src/menu/: plugin.rs
crates/vixen_core/src/physics/: collider.rs  mod.rs
crates/vixen_core/src/player/: mod.rs  player_cam.rs  plugin.rs
crates/vixen_core/src/storage/: item.rs  mod.rs
crates/vixen_core/src/terrain/: biome.rs  complex_noise.rs  generator.rs  mod.rs  simple_noise.rs  structure.rs
crates/vixen_core/src/ui/: mod.rs  plugin.rs
crates/vixen_core/src/util/: mod.rs
crates/vixen_std/: Cargo.toml
crates/vixen_std/src/: lib.rs  plugin.rs
crates/vixen_std/src/biomes/: forest.rs  mod.rs
crates/vixen_std/src/structures/: brown_mushroom.rs  mod.rs  oak_tree.rs
src/: game.rs  main.rs
src/debug/: mod.rs  plugin.rs
src/loader/: block_data.rs  chunk.rs  generator.rs  mod.rs  plugin.rs  scanner.rs  texture.rs  tool_data.rs  worldgen.rs
src/physics/: mod.rs
src/player/: mod.rs  player_cam.rs  plugin.rs
src/terrain/: generator.rs  mod.rs
src/util/: mod.rs
