[package]
name = "vixen_bevy"
version = "0.1.0"
edition = "2021"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.0", features = ["dds"] }
futures-lite = "1.12.0"
ndarray = "0.15.4"
serde = "1.0.137"
serde_json = "1.0.81"
noise = "0.7.0"
bevy_flycam = "*"
line_drawing = "1.0.0"
bevy_mod_debugdump = "0.5.0"
bevy_egui = "0.15.1"
egui = "0.18.1"
lazy_static = "*"
rand = "*"
