[package]
name = "vixen_bevy"
version = "0.1.0"
edition = "2021"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = ["dds"] }
futures-lite = "1.12.0"
ndarray = "0.15.6"
serde = "1.0.137"
serde_json = "1.0.81"
noise = "0.7.0"
bevy_flycam = "*"
line_drawing = "1.0.0"
bevy_mod_debugdump = "0.6.0"
bevy_egui = "0.18.0"
egui = "0.20.1"
lazy_static = "*"
rand = "*"
bevy_atmosphere = "0.5.0"
dashmap = { version = "5.4.0", features = ["rayon"] }
