[package]
name = "vixen_bevy"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*",
]

[dependencies]
vixen_core = { path = "crates/vixen_core" }
vixen_std = { path = "crates/vixen_std" }

bevy = { workspace = true }

[workspace.dependencies]
bevy = { version = "0.9.1", features = ["dds"] }
rand = "0.8.5"
lazy_static = "1.4.0"
ndarray = "0.15.6"
serde = "1.0.137"
serde_json = "1.0.81"
bevy_egui = "0.19.0"
egui = "0.20.1"
dashmap = { version = "5.4.0", features = ["rayon"] }

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."vixen_core"]
opt-level = 1

[profile.dev.package."vixen_std"]
opt-level = 1