[package]
name = "vixen_core"
version = "0.1.0"
edition = "2021"

# Use dependencies from parent workspace
[dependencies]
bevy = { workspace = true }
rand = { workspace = true }
lazy_static = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevy_egui = { workspace = true }
egui = { workspace = true }
dashmap = { workspace = true }

futures-lite = "1.12.0"
noise = "0.8.2"
bevy_flycam = "*"
line_drawing = "1.0.0"
bevy_mod_debugdump = "0.6.0"
bevy_atmosphere = "0.5.0"
